--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electisec-research-site",
+  "name": "yaudit-research-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
